<?php

namespace AppBundle\Entity\Marketing;

use Doctrine\Common\Collections\ArrayCollection;

class Company
{
    /**
     * @var int
     */
    private $id;

    /**
     * @var string
     */
    private $name;

    /**
     * @var string
     */
    private $size;

    /**
     * @var string
     */
    private $methodology;

    /**
     * @var Contact[]
     */
    private $contacts;

    public function __construct()
    {
        $this->contacts = new ArrayCollection();
    }

    /**
     * Get id
     *
     * @return int
     */
    public function getId()
    {
        return $this->id;
    }

    /**
     * @return string
     */
    public function getName()
    {
        return $this->name;
    }

    /**
     * @param string $name
     *
     * @return Company
     */
    public function setName($name)
    {
        $this->name = $name;

        return $this;
    }

    /**
     * @return string
     */
    public function getSize()
    {
        return $this->size;
    }

    /**
     * @param string $size
     *
     * @return Company
     */
    public function setSize($size)
    {
        $this->size = $size;

        return $this;
    }

    /**
     * @return string
     */
    public function getMethodology()
    {
        return $this->methodology;
    }

    /**
     * @param string $methodology
     *
     * @return Company
     */
    public function setMethodology($methodology)
    {
        $this->methodology = $methodology;

        return $this;
    }

    /**
     * @return Contact[]
     */
    public function getContacts()
    {
        return $this->contacts;
    }

    /**
     * @param Contact[] $contacts
     *
     * @return Company
     */
    public function setContacts($contacts)
    {
        $this->contacts = $contacts;

        return $this;
    }
}

